--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://source.jd.com/app/mrd-pc-zrwebsite.git"
+    "url": "https://github.com/guguaihaha/zr-source.git"
   },
   "keywords": [
     "zr",
